@@ -3,6 +3,23 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+[error] EditBus: java.lang.ArrayIndexOutOfBoundsException: 1
+[error] EditBus:  at org.gjt.sp.jedit.buffer.LineManager.isScreenLineCountValid(LineManager.java:145)
+[error] EditBus:  at org.gjt.sp.jedit.textarea.DisplayManager.getScreenLineCount(DisplayManager.java:223)
+[error] EditBus:  at org.gjt.sp.jedit.textarea.DisplayManager$ScrollLineCount.reset(DisplayManager.java:1098)
+[error] EditBus:  at org.gjt.sp.jedit.textarea.DisplayManager._notifyScreenLineChanges(DisplayManager.java:650)
+[error] EditBus:  at org.gjt.sp.jedit.textarea.JEditTextArea.propertiesChanged(JEditTextArea.java:4968)
+[error] EditBus:  at org.gjt.sp.jedit.EditPane.handleBufferUpdate(EditPane.java:667)
+[error] EditBus:  at org.gjt.sp.jedit.EditPane.handleMessage(EditPane.java:317)
+[error] EditBus:  at org.gjt.sp.jedit.EditBus.send(EditBus.java:148)
+[error] EditBus:  at org.gjt.sp.jedit.Buffer.propertiesChanged(Buffer.java:1530)
+[error] EditBus:  at org.gjt.sp.jedit.Buffer.setMode(Buffer.java:2025)
+[error] EditBus:  at org.gjt.sp.jedit.Buffer.setMode(Buffer.java:2058)
+[error] EditBus:  at org.gjt.sp.jedit.Buffer.finishLoading(Buffer.java:3866)
+[error] EditBus:  at org.gjt.sp.jedit.Buffer.access$800(Buffer.java:71)
+[error] EditBus:  at org.gjt.sp.jedit.Buffer$1.run(Buffer.java:280)
+[error] EditBus:  at org.gjt.sp.util.WorkThreadPool.doAWTRequest(WorkThreadPool.java:392)
+
 - wrapped dock buttons broken
 - VFS browser pathsEqual(): case sensitivity!
 - first line problem solved by reset()
